[package]
name = "adventure_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
image = "0.25.1"
reqwest = {version = "0.12.4", features = ["blocking"]}
